--- a/client/css/login.css
+++ b/client/css/login.css
@@ -140,3 +140,10 @@ body {
 html[data-theme="dark"] .btn-login {
     color: hsl(225 22% 10%);
 }
+
+
+.google-login-wrap {
+    margin-top: 14px;
+    display: flex;
+    justify-content: center;
+}
